@@ -4,14 +4,13 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.FilmValidationException;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
-import ru.yandex.practicum.filmorate.model.Director;
-import ru.yandex.practicum.filmorate.model.Film;
-import ru.yandex.practicum.filmorate.model.Genre;
+import ru.yandex.practicum.filmorate.model.*;
 import ru.yandex.practicum.filmorate.storage.film.FilmStorage;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import static ru.yandex.practicum.filmorate.model.Film.RULE_FILM_DATE;
@@ -22,16 +21,18 @@ public class FilmService {
     private final UserStorage userStorage;
     private final MPAService mpaService;
     private final GenreService genreService;
+    private final FeedService feedService;
     private final DirectorService directorService;
 
     @Autowired
     public FilmService(FilmStorage filmStorage, UserStorage userStorage,
                        MPAService mpaService, GenreService genreService,
-                       DirectorService directorService) {
+                       DirectorService directorService, FeedService feedService) {
         this.filmStorage = filmStorage;
         this.userStorage = userStorage;
         this.mpaService = mpaService;
         this.genreService = genreService;
+        this.feedService = feedService;
         this.directorService = directorService;
     }
 
@@ -46,16 +47,18 @@ public class FilmService {
             mpaService.getMPAById(film.getMpa().getId());
         }
 
-        if (film.getGenres() != null) {
-            for (Genre genre : film.getGenres()) {
-                genreService.getGenreById(genre.getId());
-            }
+        if (film.getGenres() != null && !film.getGenres().isEmpty()) {
+            Set<Long> genreIds = film.getGenres().stream()
+                    .map(Genre::getId)
+                    .collect(Collectors.toSet());
+            genreService.validateGenresExist(genreIds);
         }
 
-        if (film.getDirectors() != null) {
-            for (Director director : film.getDirectors()) {
-                directorService.getDirectorById(director.getId());
-            }
+        if (film.getDirectors() != null && !film.getDirectors().isEmpty()) {
+            Set<Long> directorIds = film.getDirectors().stream()
+                    .map(Director::getId)
+                    .collect(Collectors.toSet());
+            directorService.validateDirectorsExist(directorIds);
         }
 
         return filmStorage.create(film);
@@ -68,20 +71,23 @@ public class FilmService {
             mpaService.getMPAById(film.getMpa().getId());
         }
 
-        if (film.getGenres() != null) {
-            for (Genre genre : film.getGenres()) {
-                genreService.getGenreById(genre.getId());
-            }
+        if (film.getGenres() != null && !film.getGenres().isEmpty()) {
+            Set<Long> genreIds = film.getGenres().stream()
+                    .map(Genre::getId)
+                    .collect(Collectors.toSet());
+            genreService.validateGenresExist(genreIds);
         }
 
-        if (film.getDirectors() != null) {
-            for (Director director : film.getDirectors()) {
-                directorService.getDirectorById(director.getId());
-            }
+        if (film.getDirectors() != null && !film.getDirectors().isEmpty()) {
+            Set<Long> directorIds = film.getDirectors().stream()
+                    .map(Director::getId)
+                    .collect(Collectors.toSet());
+            directorService.validateDirectorsExist(directorIds);
         }
 
-        Film existingFilm = filmStorage.findById(film.getId())
+        filmStorage.findById(film.getId())
                 .orElseThrow(() -> new NotFoundException("Фильм с id = " + film.getId() + " не найден"));
+
         return filmStorage.update(film);
     }
 
@@ -90,29 +96,52 @@ public class FilmService {
                 .orElseThrow(() -> new NotFoundException("Фильм с id = " + id + " не найден"));
     }
 
-    public void addLike(Long filmId, Long userId) {
+    public Film addLike(Long filmId, Long userId) {
         Film film = findById(filmId);
+
         userStorage.findById(userId)
                 .orElseThrow(() -> new NotFoundException("Пользователь с id = " + userId + " не найден"));
 
         film.getLikes().add(userId);
+
+        feedService.create(userId, filmId, EventTypes.LIKE, Operations.ADD);
+        return filmStorage.update(film);
+    }
+
+    public void addRate(Long filmId, Long userId, Float rate) {
+        Film film = findById(filmId);
+
+        userStorage.findById(userId)
+                .orElseThrow(() -> new NotFoundException("Пользователь с id = " + userId + " не найден"));
+
+        film.getLikes().add(userId);
+        film.setRate(film.getRate() + rate);
+
         filmStorage.update(film);
     }
 
     public void removeLike(Long filmId, Long userId) {
         Film film = findById(filmId);
+
         userStorage.findById(userId)
                 .orElseThrow(() -> new NotFoundException("Пользователь с id = " + userId + " не найден"));
 
         film.getLikes().remove(userId);
+
         filmStorage.update(film);
+        feedService.create(userId, filmId, EventTypes.LIKE, Operations.REMOVE);
     }
 
-    public List<Film> getPopularFilms(int count) {
-        return filmStorage.findAll().stream()
-                .sorted((f1, f2) -> Integer.compare(f2.getLikes().size(), f1.getLikes().size()))
-                .limit(count)
-                .collect(Collectors.toList());
+    public List<Film> getPopularFilms(int count, Long genreId, Integer year) {
+        if (genreId != null && year != null) {
+            return filmStorage.getPopularFilmsByGenreYear(genreId, year, count);
+        } else if (genreId != null) {
+            return filmStorage.getPopularFilmsByGenre(genreId, count);
+        } else if (year != null) {
+            return filmStorage.getPopularFilmsByYear(year, count);
+        } else {
+            return filmStorage.getPopularFilms(count);
+        }
     }
 
     public List<Film> getPopularFilmsByGenre(int count, Long genreId) {
@@ -153,60 +182,25 @@ public class FilmService {
     public List<Film> getFilmsByDirector(Long directorId, String sortBy) {
         List<Film> directorFilms;
 
+    public List<Film> getFilmsByDirector(Long directorId, DirectorSortBy sortBy) {
         directorService.getDirectorById(directorId);
 
-        directorFilms = filmStorage
-                .findAll()
-                .stream()
-                .filter(f -> f.getDirectors().stream().anyMatch(d -> d.getId().equals(directorId)))
-                .toList();
+        List<Film> films = filmStorage.getFilmsByDirector(directorId);
 
-        if ("year".equalsIgnoreCase(sortBy)) {
-            return directorFilms.stream()
-                    .sorted(Comparator.comparing(Film::getReleaseDate))
-                    .collect(Collectors.toList());
-        } else if ("likes".equalsIgnoreCase(sortBy)) {
-            return directorFilms.stream()
-                    .sorted((f1, f2) -> Integer.compare(f2.getLikes().size(), f1.getLikes().size()))
-                    .collect(Collectors.toList());
-        } else {
-            throw new IllegalArgumentException("Некорректный параметр сортировки: " + sortBy);
+        if (sortBy.equals(DirectorSortBy.LIKES)) {
+            return films.stream()
+                    .sorted((f1, f2) -> f2.getLikes().size() - f1.getLikes().size()).toList();
+        } else if (sortBy.equals(DirectorSortBy.RATE)) {
+            return films.stream()
+                    .sorted((f1, f2) -> (int) (f2.getRate() - f1.getRate())).toList();
         }
+
+        return films.stream().sorted(Comparator.comparingInt(f -> f.getReleaseDate().getYear())).toList();
     }
 
-    public List<Film> searchFilms(String query, String by) {
-        if (query == null || query.trim().isEmpty()) {
-            throw new IllegalArgumentException("Поисковый запрос не может быть пустым");
-        }
 
-        String lowerQuery = query.toLowerCase();
-        List<Film> allFilms = filmStorage.findAll();
-
-        if (by.contains("title") && by.contains("director")) {
-            return allFilms.stream()
-                    .filter(film -> {
-                        boolean isEqualsName = film.getName().toLowerCase().contains(lowerQuery);
-                        boolean isEqualsDir = film.getDirectors().stream().anyMatch(d -> d.getName().toLowerCase().contains(lowerQuery));
-
-                        return isEqualsName || isEqualsDir;
-                    })
-                    .sorted((f1, f2) -> Integer.compare(
-                            f2.getLikes().size(),
-                            f1.getLikes().size()))
-                    .collect(Collectors.toList());
-        } else if (by.contains("title")) {
-            return allFilms.stream()
-                    .filter(film -> film.getName().toLowerCase().contains(lowerQuery))
-                    .sorted((f1, f2) -> Integer.compare(f2.getLikes().size(), f1.getLikes().size()))
-                    .collect(Collectors.toList());
-        } else if (by.contains("director")) {
-            return allFilms.stream()
-                    .filter(film -> film.getDirectors().stream().anyMatch(d -> d.getName().toLowerCase().contains(lowerQuery)))
-                    .sorted((f1, f2) -> Integer.compare(f2.getLikes().size(), f1.getLikes().size()))
-                    .collect(Collectors.toList());
-        } else {
-            throw new IllegalArgumentException("Некорректный параметр поиска: " + by);
-        }
+    public List<Film> searchFilms(String query, List<SearchBy> byList) {
+        return filmStorage.searchFilms(query, byList);
     }
 
     public void deleteFilm(Long id) {
@@ -224,5 +218,14 @@ public class FilmService {
         if (film.getReleaseDate() != null && film.getReleaseDate().isBefore(RULE_FILM_DATE)) {
             throw new FilmValidationException("Дата релиза не может быть раньше " + RULE_FILM_DATE);
         }
+    }
+
+    public List<Film> getCommonFilms(Long userId, Long friendId) {
+        userStorage.findById(userId)
+                .orElseThrow(() -> new NotFoundException("Пользователь с id = " + userId + " не найден"));
+        userStorage.findById(friendId)
+                .orElseThrow(() -> new NotFoundException("Пользователь с id = " + friendId + " не найден"));
+
+        return filmStorage.findCommonFilms(userId, friendId);
     }
 }
